# ecdlp-5-bit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  benchmark.json  benchmark.ps1  benchmark.sh  benchmark.toml  ecdlp.js  install.sh  setup.ps1  setup.sh
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: trusted-worker.yml  validate.yml
docs/: ACCEPTING_SUBMISSIONS.md  CONTENDER_PLAYBOOK.md  EXTERNAL_TOOLS.md
docs/tracks/: FULL_SHOR.md  QFT.md  SHOR_ORACLE.md
specs/: README.md  SubmissionWorkflow.cfg  SubmissionWorkflow.tla
src/: lib.rs  main.rs  ops_io.rs  sim.rs
src/full_shor/: mod.rs  oracle_adapter.rs  qft.rs  recovery.rs
src/qft/: mod.rs  recovery.rs  sampling.rs  statevector.rs
src/shor_oracle/: ._mod.rs  architecture.mmd  builder.rs  field_arithmetic.rs  mod.rs  scalar_api.rs  scalar_strategy.rs
src/shor_oracle/memory/: ._README.md  README.md
tools/: package-submission.ps1  prepare-acceptance.ps1  run-tlc.sh  trusted-worker.mjs
